# ShelfTrace

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  HOW_IT_WORKS.md  POSITIONING.md  README.md  docker-compose.yml  render.yaml  verify.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  test_shelftrace.db
backend/app/: config.py  database.py  db_migrate.py  logging_config.py  main.py  mcp_server.py  middleware.py  models.py  observability.py  rate_limit.py  schemas.py  scope.py  security.py  seed.py  worker.py
backend/app/adapters/: base.py  scenario.py
backend/app/data_fixtures/: usda_ams_strawberries_AH_FV160.json  usda_fdc_milk_1871817.json
backend/app/pricing/: __init__.py  cannibalization.py  constraints.py  elasticity.py  ladder.py  models.py  optimizer.py  pipeline.py  seed.py  signals.py  supply_signals.py
backend/app/routers/: batches.py  certification.py  common.py  data_replay.py  demo.py  engineering.py  incidents.py  operations.py  pricing.py  product_graph.py  receipts.py  regression.py  scenarios.py  scraping.py  storefront.py
backend/app/scenarios/: realistic_scale.py
backend/app/scrapers/: __init__.py  base.py  pipeline.py  registry.py  robots.py  storefront.py
backend/app/scrapers/spiders/: books_demo.py  fresh_market.py  whole_foods.py
backend/app/services/: audit.py  behavior.py  blast_radius.py  bulk_import.py  certification.py  data_replay.py  dead_letter.py  entity_matcher.py  ingestion.py  measurement.py  orchestrator.py  plausibility.py  product_graph.py  queries.py  receipt.py  reconciliation.py  recovery.py  regression.py  scenario_enrichment.py  scenarios.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_jsonb_and_backoff.py  0003_product_knowledge_graph.py  0004_import_provenance.py  0005_source_run_id.py  0006_external_signal_scope.py  0007_reclassify_demo_seed.py  0008_replay_and_source_records.py  0009_incident_acknowledgement.py  0010_implausible_price_incident.py  0011_action_effective_at.py  0012_action_promotional_price.py  0013_scenario_action_grocery_fields.py
backend/scripts/: backfill_costs.py  db_audit.py
backend/tests/: _helpers.py  conftest.py  prove_certification.py  prove_custom_scenario.py  prove_sequence.py  test_acknowledgement.py  test_audit.py  test_batch_lifecycle.py  test_blast_radius.py  test_bulk_import.py  test_bulk_import_stream.py  test_canary.py  test_cell_history.py  test_certification.py  test_concurrency_pg.py  test_cpi_integrity.py  test_data_replay.py  test_deadline_recovery.py  test_decision_receipt.py  test_demo_live_scope.py  test_demo_reclassify.py  test_demo_reset.py  test_expansion.py  test_explain_endpoint.py  test_gate_hardening.py  test_grocery_storefront.py  test_ingestion.py  test_jsonb.py  test_kvi_watchlist.py  test_margin_targets.py  test_markdown_sla.py  test_measurement.py  test_measurement_integrity.py  test_messy_data_robustness.py  test_milk_hero.py  test_observability.py  test_outbox_backoff.py  test_plausibility.py  test_pricing.py  test_pricing_advanced.py  (+20 more)
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
frontend/components/: AppShell.tsx  AuditTimeline.tsx  BatchLifecycleStepper.tsx  BatchPicker.tsx  Brand.tsx  ChannelPedestal.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextViewSwitcher.tsx  CpiIntegrityBadge.tsx  Donut.tsx  EligibilityPanel.tsx  ErrorBoundary.tsx  EvidenceRail.tsx  ExperienceAssurance.tsx  LiveModeNotice.tsx  LivePipeline.tsx  MeasurementIntegrityCard.tsx  MetricCard.tsx  ModeBadge.tsx  ModeProvider.tsx  ScenarioActionHints.tsx  ScenarioFlowStepper.tsx  ScenariosBulkPanel.tsx  Skeleton.tsx  StatusPill.tsx  Toast.test.tsx  Toast.tsx  TopNav.tsx
frontend/lib/: api.ts  (+5 more)
qa_csvs/: shelftrace_qa_01_clean_success.csv  shelftrace_qa_02_valid_business_edges.csv  shelftrace_qa_03_invalid_mixed_rows.csv  shelftrace_qa_04_duplicates_and_blanks.csv  shelftrace_qa_05_timeout_recovery.csv
(+68 files in other folders)
