[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shelftrace-control-plane"
version = "0.1.0"
description = "Canary rollout, execution reconciliation, and incident recovery for AI-approved grocery price changes"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.27",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
