[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shelftrace-control-plane"
version = "0.1.0"
description = "Canary rollout, execution reconciliation, and incident recovery for AI-approved grocery price changes"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.117.1",
    "uvicorn[standard]==0.48.0",
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.1",
    "pydantic-settings==2.11.0",
    "redis==5.0.1",
    "python-dotenv==1.1.1",
    "alembic==1.17.2",
    # mcp (the [mcp] extra) needs httpx>=0.27.1; <0.28 pins to the line this
    # stack is verified against (Starlette 0.48 TestClient + mcp 1.27).
    "httpx>=0.27.1,<0.28",
    "beautifulsoup4==4.12.3",
    "lxml>=5.1,<7",
    "slowapi==0.1.9",
    "limits==3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
]
otel = [
    "opentelemetry-api==1.23.0",
    "opentelemetry-sdk==1.23.0",
    "opentelemetry-instrumentation-fastapi==0.44b0",
    "opentelemetry-instrumentation-sqlalchemy==0.44b0",
    "opentelemetry-instrumentation-redis==0.44b0",
    "opentelemetry-exporter-otlp==1.23.0",
]
# Opt-in: the agent-facing MCP server (app/mcp_server.py). Kept optional so the
# core API image stays lean and the test suite never depends on the MCP SDK.
#   pip install ".[mcp]"   then   python -m app.mcp_server
mcp = [
    "mcp>=1.2.0",
    # mcp pulls in sse-starlette; its 3.x line requires starlette>=0.49.1, which
    # collides with FastAPI's starlette<0.49 cap. Pin <3 so the (opt-in) MCP
    # server's deps stay compatible with the API's FastAPI/Starlette and
    # `pip install ".[mcp]"` resolves cleanly. The stdio transport this server
    # uses doesn't touch sse-starlette at all — this is purely conflict hygiene.
    "sse-starlette<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
